--- a/lists.html
+++ b/lists.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Lists</title>
 </head>
+
 <body>
-<li>
-    
-</li>
+    <ol>
+        <li>black</li>
+        <li>white</li>
+        <li>red</li>
+        <li>blue</li>
+    </ol>
+    <ul>
+        <li>black
+            <ul>
+                <li>primo</li>
+                <li>secundo</li>
+            </ul>
+        </li>
+        <li>white</li>
+        <li>red</li>
+        <li>blue</li>
+    </ul>
 </body>
+
 </html>
