--- a/Forms.html
+++ b/Forms.html
@@ -35,6 +35,29 @@
         <input type="color" name="Favorite Color">
         <br>
         <input type="range" name="points" min="0" max="10">
+        <br>
+        <select name="country" id="country">
+            <option value="Serbia">Serbia</option>
+            <option value="Romania">Romania</option>
+            <option value="Cehia">Cehia</option>
+        </select>
+        <fieldset>
+            <legend>Personal info</legend>
+            <label for="name">First name:</label><br>
+            <input type="text" name="name" id="name"><br>
+
+            <label for="surname">Last name:</label><br>
+            <input type="text" name="surname" id="surname"><br>
+        </fieldset>
+
+        <fieldset>
+            <legend>Contact</legend>
+            <label for="email">Email:</label><br>
+            <input type="text" name="email" id="email"><br>
+
+            <label for="phone">Phone:</label><br>
+            <input type="text" name="phone" id="phone">
+        </fieldset>
     </form>
 </body>
 
